<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Havka Valera</string>
    <string name="welcome_to_valera">Welcome to Havka Valera!</string>
    <string name="welcome_icon">nyam_icon</string>
    <string name="where_are_you">Where do you want to eat?</string>
    <string name="order">Order</string>
    <string name="choose_category">Choose Category</string>
    <string name="choose_restaurant">Choose Restaurant</string>
    <string name="search">Search</string>
    <string name="search_in_distance">Search in radius:</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="cancel_all_orders">Cancel All</string>
    <string name="ordered">Ordered:</string>
    <string name="make_order">Make Order</string>
    <string name="app_id">524769977614277</string>
    <string name="price">Price:</string>
    <string name="count">Count:</string>
    <string name="phone_number">Phone Number</string>
</resources>
